--- a/welcome.html
+++ b/welcome.html
@@ -12,6 +12,17 @@
             background-color: #f5f5f5;
             margin: 0;
             padding: 20px;
+            
+                background: url(https://copilot.microsoft.com/rp/itdq0TGlsM-BDvSovDaQdrVxPbo.jpg) no-repeat center center fixed;
+    background-size: 100% 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    width: 100%;
+            
         }
         .container {
             max-width: 800px;
