--- a/welcome.html
+++ b/welcome.html
@@ -10,13 +10,12 @@
         body {
     font-family: Arial, sans-serif;
     background: url(https://copilot.microsoft.com/rp/itdq0TGlsM-BDvSovDaQdrVxPbo.jpg) no-repeat center center fixed;
-    background-size: 100% 100%;
-    height: 100vh;
+    background-size: 100% 100%; 
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 0;
+    top: 22px;
     width: 100%;
             
         }
