--- a/welcome.html
+++ b/welcome.html
@@ -9,7 +9,7 @@
     <style>
         body {
     font-family: Arial, sans-serif;
-    background: url(https://copilot.microsoft.com/rp/itdq0TGlsM-BDvSovDaQdrVxPbo.jpg) no-repeat center center fixed;
+    background: url(https://github.com/sinjithms/Auto-Reload-Pro/blob/main/bg.jpg) no-repeat center center fixed;
     background-size: 100% 100%; 
     display: flex;
     justify-content: center;
