--- a/uninstall.html
+++ b/uninstall.html
@@ -10,9 +10,14 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 20px;
+    background: url(https://github.com/sinjithms/Auto-Reload-Pro/blob/main/bg.jpg) no-repeat center center fixed;
+    background-size: 100% 100%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 22px;
+    width: 100%;
         }
         .container {
             max-width: 800px;
