--- a/uninstall.html
+++ b/uninstall.html
@@ -10,7 +10,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-    background: url(https://github.com/sinjithms/Auto-Reload-Pro/blob/main/bg.jpg) no-repeat center center fixed;
+    background: url(bg.jpg) no-repeat center center fixed;
     background-size: 100% 100%; 
     display: flex;
     justify-content: center;
