--- a/welcome.html
+++ b/welcome.html
@@ -45,7 +45,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to AutoReloadPro</h1>
+        <div class="display:flex;">
+            <div> <img src="icon-48.png" alt=""> </div>
+        <div><h1>Welcome to AutoReloadPro</h1></div>
         <p>AutoReloadPro is a Chrome extension that automates the process of refreshing web pages at specified intervals. Whether you're monitoring live updates, tracking auctions, or simply want to keep content up-to-date, AutoReloadPro saves you time by automatically refreshing the current tab without manual intervention.</p>
         
         <h2>Key Features</h2>
