--- a/welcome.html
+++ b/welcome.html
@@ -46,8 +46,9 @@
 <body>
     <div class="container">
         <div class="display:flex;">
-            <div> <img src="icon-48.png" alt=""> </div>
+        <div> <img src="icon-48.png" alt=""> </div>
         <div><h1>Welcome to AutoReloadPro</h1></div>
+        </div>
         <p>AutoReloadPro is a Chrome extension that automates the process of refreshing web pages at specified intervals. Whether you're monitoring live updates, tracking auctions, or simply want to keep content up-to-date, AutoReloadPro saves you time by automatically refreshing the current tab without manual intervention.</p>
         
         <h2>Key Features</h2>
