--- a/welcome.html
+++ b/welcome.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="display:flex;">
+        <div style="display: flex;">
         <div> <img src="icon-48.png" alt=""> </div>
         <div><h1>Welcome to AutoReloadPro</h1></div>
         </div>
