--- a/welcome.html
+++ b/welcome.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="container">
-        <div style="display: flex; gap:1vh;">
+        <div style="display: flex; gap: 3vh; margin-bottom: 2vh;">
         <div> <img src="icon-48.png" alt=""> </div>
         <div><h1>Welcome to AutoReloadPro</h1></div>
         </div>
