--- a/uninstall.html
+++ b/uninstall.html
@@ -45,7 +45,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Uninstall AutoReloadPro</h1>
+         <div style="display: flex; gap: 3vh; margin-bottom: 2vh;">
+        <div> <img src="icon-48.png" alt=""> </div>
+        <div><h1>Uninstall AutoReloadPro</h1></div>
+        </div> 
         <p>Are you sure you want to uninstall AutoReloadPro?</p>
         <p>Uninstalling AutoReloadPro will remove the extension from your browser. You will no longer be able to automatically refresh web pages at specified intervals.</p>
         <p>If you're experiencing any issues or have feedback, we'd appreciate it if you could <a href="https://github.com/sinjithms/AutoReloadPro/issues">let us know</a> before uninstalling.</p>
