--- a/Uninstall.html
+++ b/Uninstall.html
@@ -19,7 +19,7 @@
             background-color: #fff;
             border-radius: 8px;
             padding: 30px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 5px 7px 20px 3px rgb(0 0 0 / 15%);
         }
         h1 {
             color: #333;
