--- a/welcome.html
+++ b/welcome.html
@@ -42,6 +42,7 @@
             text-decoration: underline;
         }
     </style>
+    <meta name="google-site-verification" content="FZqwWvLd-yM9FfmUR4aWeB3K7rQTKsKbdan2ejbtScw" />
 </head>
 <body>
     <div class="container">
