--- a/welcome.html
+++ b/welcome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to InspireTab</title>
+    <title>Welcome to AutoReloadPro</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -54,49 +54,56 @@
         .social-link {
             margin: 0 5px;
         }
+        .additional-info {
+            margin-top: 40px;
+        }
+        .additional-info p {
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>Welcome to InspireTab</h1>
-            <img class="logo" src="icon-48.png" alt="InspireTab Logo">
+            <h1>Welcome to AutoReloadPro</h1>
+            <img class="logo" src="icon-48.png" alt="AutoReloadPro Logo">
         </div>
         <div class="features">
-            <h2>Elevate Your Browsing Experience</h2>
+            <h2>Automate Page Refreshing with Ease</h2>
             <div class="feature">
-                <h3>Inspiring Quotes on Every New Tab</h3>
-                <p>Experience a daily dose of inspiration as you explore the web. Each new tab welcomes you with a fresh, thought-provoking quote to ignite your creativity and drive.</p>
+                <h3>Customizable Refresh Intervals</h3>
+                <p>Set custom intervals for automatic page reloads, ranging from seconds to minutes, to keep content up-to-date effortlessly.</p>
             </div>
             <div class="feature">
-                <h3>Dark Mode & Light Mode</h3>
-                <p>Choose between dark mode and light mode to suit your preferences and reduce eye strain during night browsing sessions.</p>
+                <h3>Intuitive Popup Interface</h3>
+                <p>Easily control the extension with a user-friendly popup interface accessible via the Chrome toolbar for quick adjustments.</p>
             </div>
             <div class="feature">
-                <h3>Font Customization</h3>
-                <p>Customize the font style and size to enhance readability and personalize your browsing experience.</p>
+                <h3>Effortless Configuration</h3>
+                <p>Configure settings quickly and effortlessly with simple options to enable/disable auto-reload and adjust refresh intervals according to your preferences.</p>
             </div>
             <div class="feature">
-                <h3>Extensive Quote Library</h3>
-                <p>Access a vast collection of over 10,000 quotes sourced from renowned authors, thinkers, and leaders.</p>
+                <h3>Persistent Settings</h3>
+                <p>Your preferences are saved automatically, ensuring that your chosen settings remain intact even after closing and reopening Chrome.</p>
             </div>
             <div class="feature">
-                <h3>Seamless Navigation</h3>
-                <p>Easily navigate through quotes with intuitive next and previous buttons for seamless browsing.</p>
+                <h3>Lightweight and Efficient</h3>
+                <p>Designed to be lightweight and efficient, AutoReloadPro minimizes resource consumption while maximizing functionality for a seamless browsing experience.</p>
             </div>
         </div>
         <div class="cta">
-            <a class="cta-button" href="#">Download Now</a>
+            <a class="cta-button" href="#">Get AutoReloadPro Now</a>
         </div>
         <div class="social-links">
             <p>Connect With Us:</p>
-            <a class="social-link" href="https://twitter.com/inspiretab">Twitter</a>
-            <a class="social-link" href="https://www.facebook.com/inspiretab">Facebook</a>
-            <a class="social-link" href="https://www.reddit.com/r/inspiretab">Reddit</a>
+            <a class="social-link" href="https://twitter.com/autoreloadpro">Twitter</a>
+            <a class="social-link" href="https://www.facebook.com/autoreloadpro">Facebook</a>
+            <a class="social-link" href="https://www.reddit.com/r/autoreloadpro">Reddit</a>
         </div>
-        <div class="support">
-            <p>If you find InspireTab helpful and would like to support its development, you can buy me a coffee! ☕️</p>
-            <a href="https://ko-fi.com/sinjith"><img src="https://www.ko-fi.com/img/githubbutton_sm.svg" alt="Buy me a coffee"></a>
+        <div class="additional-info">
+            <h2>More Information</h2>
+            <p>AutoReloadPro is a Chrome extension developed by sinjith, aimed at automating the process of refreshing web pages at specified intervals. Whether you're monitoring live updates, tracking auctions, or simply want to keep content up-to-date, AutoReloadPro saves you time by automatically refreshing the current tab without manual intervention.</p>
+            <p>If you find AutoReloadPro useful and would like to support its development, consider buying the developer a coffee on Ko-fi. Contributions are also welcome! For more details, visit the GitHub repository.</p>
         </div>
     </div>
 </body>
