--- a/welcome.html
+++ b/welcome.html
@@ -15,7 +15,10 @@
         .container {
             max-width: 800px;
             margin: 0 auto;
-            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            padding: 30px;
+            box-shadow: 5px 7px 20px 3px rgb(0 0 0 / 15%);
         }
         .header {
             text-align: center;
