--- a/welcome.html
+++ b/welcome.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to AutoReloadPro</title>
     <style>
-        body {
+       body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-            color: #333;
-        }
+    background: url(bg.jpg) no-repeat center center fixed;
+    background-size: 100% 100%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 22px;
+    width: 100%;}
         .container {
             max-width: 800px;
             margin: 0 auto;
