--- a/Privacypolicy.html
+++ b/Privacypolicy.html
@@ -13,7 +13,7 @@
     <main>
         <section>
             <h2>Introduction</h2>
-            <p>[Your Extension Name] ("us", "we", or "our") is committed to protecting the privacy of its users. This Privacy Policy outlines how we collect, use, and safeguard the information you provide while using [Your Extension Name] Chrome extension (the "Extension").</p>
+            <p>Auto-Reload-Pro is committed to protecting the privacy of its users. This Privacy Policy outlines how we collect, use, and safeguard the information you provide while using [Your Extension Name] Chrome extension (the "Extension").</p>
         </section>
         <section>
             <h2>Information We Collect</h2>
